# MClaw

./: .gitignore  CLAUDE.md  HANDOVER.md  chanjing-openapi.yaml  check.bat  setup.bat  setup.ps1  start-hidden.vbs  start.bat  stop-hidden.vbs  交接文档.md  交接文档_20260529.md  蛙蔻面板（前端+后端）.md
backend/: _get_ilink_creds.js  _harvest_cookies.js  _test.xlsx  _test_woyaobid.js  bid-collector.js  bid-crawler.js  build-obfuscate.js  config.js  db.js  license.js  package-lock.json  package.json  server.js  test-crawler.js  test-rewrite.js
backend/auto_douyin/: .gitattributes  .gitignore  README.md  main.py  page_text.txt  pyproject.toml  test_all_platforms.py  test_wechat_upload.py
backend/auto_douyin/src/video_uploader/: __init__.py  __main__.py  server.py
backend/auto_douyin/src/video_uploader/api/: __init__.py  app.py  routes.py
backend/auto_douyin/src/video_uploader/core/: __init__.py  bilibili_uploader.py  comment_scraper.py  config.py  douyin_uploader.py  douyin_uploader_v2.py  kuaishou_uploader.py  wechat_channel_uploader.py  xiaohongshu_uploader.py
backend/auto_douyin/src/video_uploader/models/: __init__.py  config.py  douyin.py  platforms.py
backend/auto_douyin/src/video_uploader/services/: __init__.py  config_service.py  douyin_service.py  platform_manager.py
backend/auto_douyin/src/video_uploader/utils/: auto_tools.py  logger.py
backend/auto_douyin/tests/: conftest.py
backend/auto_douyin/tests/integration/: test_api.py
backend/auto_douyin/tests/unit/: test_models.py  test_services.py
docs/: phase1-internal-agent-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
tools/: license-gen.html  (+2 more)
(+271 files in other folders)
